<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimary"
    tools:context=".Definitions">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/def_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/def_title_1"
                android:textColor="?android:attr/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/def_line2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:inputType="textMultiLine"
                android:minLines="3"

                android:singleLine="false"
                android:text="@string/def_content_1"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/def_line3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/def_title_2"
                android:textColor="?android:attr/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/def_line4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:inputType="textMultiLine"

                android:minLines="3"
                android:singleLine="false"
                android:text="@string/def_content_2"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/def_line5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/def_title_3"
                android:textColor="?android:attr/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/def_line6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:inputType="textMultiLine"

                android:minLines="3"
                android:singleLine="false"
                android:text="@string/def_content_3"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/def_line7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/def_title_4"
                android:textColor="?android:attr/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/def_line8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:inputType="textMultiLine"

                android:minLines="3"
                android:singleLine="false"
                android:text="@string/def_content_4"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/def_line9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/def_title_5"
                android:textColor="?android:attr/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/def_line10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:inputType="textMultiLine"

                android:minLines="3"
                android:singleLine="false"
                android:text="@string/def_content_5"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/def_line11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/def_title_6"
                android:textColor="?android:attr/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/def_line12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:inputType="textMultiLine"

                android:minLines="3"
                android:singleLine="false"
                android:text="@string/def_content_6"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>